k8s/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  # type: LoadBalancer
  selector:
    app: postgres
  ports:
   - protocol: TCP 
     port: 80
     targetPort: 5432
