k8s/sso-consumer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-consumer-svc
spec:
  selector:
    component: sso-consumer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3020
