k8s/sso-server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-server-svc
spec:
  selector:
    component: sso-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
